--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "next": "13.4.8",
     "next-auth": "^4.22.1",
     "postcss": "8.4.25",
-    "prettier": "^3.0.0",
+    "prettier": "2.8",
     "prettier-plugin-tailwindcss": "^0.3.0",
     "prisma": "^4.16.2",
     "react": "18.2.0",
@@ -30,5 +30,8 @@
     "tailwindcss": "3.3.2",
     "typescript": "5.1.6",
     "zod": "^3.21.4"
+  },
+  "resolutions": {
+    "@trivago/prettier-plugin-sort-imports/**/@babel/parser": "7.18.5"
   }
 }
