--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,9 +20,18 @@
       }
     ],
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "react": ["./node_modules/@types/react"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "./src/**/*", "./__helpers__/*", "server/**/*" ],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "./src/**/*",
+    "./__helpers__/*",
+    "server/**/*"
+  ],
   "exclude": ["node_modules"]
 }
