--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.0.0",
-    "@prisma/client": "^4.16.2",
+    "@prisma/client": "^5.0.0",
     "@types/node": "20.4.0",
     "@types/react": "^18.2.14",
     "@types/react-dom": "18.2.6",
@@ -24,7 +24,6 @@
     "postcss": "8.4.25",
     "prettier": "2.8",
     "prettier-plugin-tailwindcss": "^0.3.0",
-    "prisma": "^4.16.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.2",
@@ -33,5 +32,8 @@
   },
   "resolutions": {
     "@trivago/prettier-plugin-sort-imports/**/@babel/parser": "7.18.5"
+  },
+  "devDependencies": {
+    "prisma": "^5.0.0"
   }
 }
